feat: initial work on resource purchases info
